inegrated the ai features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+# Cloudflare AI Configuration
+cloudflare.ai.account-id=${CLOUDFLARE_ACCOUNT_ID:731433191397179e2e633570ce0c691a}
+cloudflare.ai.api-token=${CLOUDFLARE_API_TOKEN:mwRP0NnP7Kn2an1_fa99XY7RRTFTsEdOwPWLS8ph}
+cloudflare.ai.model=${CLOUDFLARE_AI_MODEL:@cf/meta/llama-3.1-8b-instruct}
+cloudflare.ai.base-url=https://api.cloudflare.com/client/v4
