Implemented emailnotification end point and splitting feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,12 @@ cloudflare.ai.account-id=${CLOUDFLARE_ACCOUNT_ID:731433191397179e2e633570ce0c691
 cloudflare.ai.api-token=${CLOUDFLARE_API_TOKEN:mwRP0NnP7Kn2an1_fa99XY7RRTFTsEdOwPWLS8ph}
 cloudflare.ai.model=${CLOUDFLARE_AI_MODEL:@cf/meta/llama-3.1-8b-instruct}
 cloudflare.ai.base-url=https://api.cloudflare.com/client/v4
+
+# Gmail SMTP Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bala.aapkaavas@gmail.com
+spring.mail.password=stvr lotm fgkt pbhu
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
